--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,12 @@
 ### The change logs are in English, so far any and all translations of the Change Logs were done via online websites:
 ### -> NONE of the Translators who Volunteered their time are at fault for any imperfections!
 
+1.1.0
+-> Refactored Code with callable scripts and triggers for common cases to improve tooltips
+-> Fix Console flags editing mistakes regarding this mod's cheats
+-> Fixed descriptive tooltip for setting a colony as protected
+-> 'Reset ALL Colony Protections' now describes every colony which will lose protected status
+
 1.0.5d
 -> Undo Partitioning Diplomatic Action now fires a choice event where you can chose to set that colony as Protected.
 
