--- a/localisation/cpt_customizable_localization_l_english.yml
+++ b/localisation/cpt_customizable_localization_l_english.yml
@@ -1,4 +1,5 @@
-﻿l_english:
+﻿# Written by mat1432 https://steamcommunity.com/id/mat1432/ (Steam) https://github.com/mat1432/Colonial_Partitioning (GitHub)
+l_english:
 # custom localisation
  cpt_core_setting_loc1: "Translate §YCores§!"
  cpt_core_setting_loc2: "Skip §YUncored Colonies§!"
