--- a/localisation/cpt_new_diplomatic_actions_l_english.yml
+++ b/localisation/cpt_new_diplomatic_actions_l_english.yml
@@ -1,4 +1,5 @@
-﻿l_english:
+﻿# Written by mat1432 https://steamcommunity.com/id/mat1432/ (Steam) https://github.com/mat1432/Colonial_Partitioning (GitHub)
+l_english:
 # new diplomatic actions
  cpt_protect_colony: "<CP> Protect from Colony Partition"
  cpt_protect_colony_title: "<CP> Protect from Colony Partition"
