--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,9 @@
+# Made by mat1432 https://steamcommunity.com/id/mat1432/ (Steam) https://github.com/mat1432/Colonial_Partitioning (GitHub)
 ### The change logs are in English, so far any and all translations of the Change Logs were done via online websites:
 ### -> NONE of the Translators who Volunteered their time are at fault for any imperfections!
+
+1.1.1
+
 
 1.1.0
 -> Added [url=https://github.com/mat1432/colonial_fixes/]GitHub Repository[/url]
