--- a/localisation/cpt_effect_tooltips_l_english.yml
+++ b/localisation/cpt_effect_tooltips_l_english.yml
@@ -1,4 +1,5 @@
-﻿l_english:
+﻿# Written by mat1432 https://steamcommunity.com/id/mat1432/ (Steam) https://github.com/mat1432/Colonial_Partitioning (GitHub)
+l_english:
 # tooltips
  colony_p_ironman: "§RNot allowed on Ironman Saves OR when Cheats are Disabled!§!"
 
