--- a/localisation/cpt_trigger_tooltips_l_english.yml
+++ b/localisation/cpt_trigger_tooltips_l_english.yml
@@ -1,4 +1,5 @@
-﻿l_english:
+﻿# Written by mat1432 https://steamcommunity.com/id/mat1432/ (Steam) https://github.com/mat1432/Colonial_Partitioning (GitHub)
+l_english:
 # tooltips
 #   trigger tooltips
  cpt_menu_open: "Colony Partition menu is NOT open!"
