--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,15 @@
 ### The change logs are in English, so far any and all translations of the Change Logs were done via online websites:
 ### -> NONE of the Translators who Volunteered their time are at fault for any imperfections!
 
+1.1.1
+[list]
+    [*]Allow 'Undo Partitioning' Diplo Action on active players.
+    [list]
+        [*][i]Other Players are still always protected from this action![/i]
+    [/list]
+    [*]'Undo Partitioning' now counts for the Multiplayer delay. (It scans every province worldwide; It is more intensive than regular Partitioning!)
+[/list]
+
 1.1.0b
 [list]
     [*]Minor Refactoring of code
