--- a/localisation/cpt_effect_tooltips_l_english.yml
+++ b/localisation/cpt_effect_tooltips_l_english.yml
@@ -27,7 +27,7 @@ l_english:
  cpt_unset_protection_this_tt: "§Y[This.GetName]§! will §RLose§! §YProtected§! status!"
 
 # for undo partitioning
- cpt_undo_partitioning_tt: "Finds all provinces in the world that was taken during partitioning, and gives them back.\nThis does NOT give them Cores or Claims, they are required to make new Cores if need be!\nProvinces CANNOT be stripped from Active Players!\nFollows the same logic as all Partitioning features.\nIf you Annex the Colony or it changes to a Formable: They will lose all lands recognised as taken!\n§OThis Will Cause SEVERE LAG!§!"
+ cpt_undo_partitioning_tt: "Finds all provinces in the world that was taken during partitioning, and gives them back.\nThis does NOT give them Cores or Claims, they are required to make new Cores if need be!\nProvinces CANNOT be taken away from Active Players!\nFollows the same logic as all Partitioning features.\nIf you Annex the Colony or it changes to a Formable: They will lose all lands recognised as taken!\n§OThis Will Cause SEVERE LAG!§!"
 
  cpt_claims_1_tt: "\nPrevious Owner will §RLose§! All §YCores§!"
  cpt_claims_2_tt: "\nPrevious Owner will §GGain§! §YClaims§!"
