Mod prefix icon
Changed mod prefix from <CP> to the vanilla colonist icon

--- a/localisation/cpt_decisions_l_german.yml
+++ b/localisation/cpt_decisions_l_german.yml
@@ -3,5 +3,5 @@
 ##Übersetzt von Thylon##
 
 # decisions
-colonial_partition_title: "<CP> Kolonie Aufteilung"
+colonial_partition_title: "£cptsettlericon£ Kolonie Aufteilung"
 colonial_partition_desc: "Öffnet das Menü "Kolonieaufteilung" und korrigiert alle Kolonien, die sich in die Kolonialregion einer anderen Kolonie ausdehnen.\nKann auch verwendet werden, um die neue Welt zu erobern und Ihre Kolonien sie für Sie zu Kernprovinzen zu machen!"
